fixed side portion taking too much space

--- a/css/style2.css
+++ b/css/style2.css
@@ -64,7 +64,18 @@ body {
 /* Form */
 
 .form {
+    text-align: center;
+    padding: 0 25%;
+    width: 50%;
+}
 
+.form input {
+    text-align: center;
+    max-width: 30%;
+}
+
+.mainContent label {
+    text-align: left;
 }
 
 /* Footer */
@@ -73,4 +84,72 @@ body {
     text-align: center;
     border-top: 2px solid #dddddd;
     padding-bottom: 7px;
+}
+
+
+/*Form Styling*/
+#contactForm {
+  display: flex;
+  flex-direction: column;
+}
+
+#contactForm label {
+  font-weight: 600;
+  color: #333;
+  font-size: 1rem;
+}
+
+#contactForm input,
+#contactForm textarea {
+  padding: 14px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  height: 0.5em;
+}
+
+#contactForm textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+#contactForm .radio-group {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+#contactForm input[type="radio"] {
+  width: 100%;
+  margin: auto;
+}
+
+#contactForm button {
+  padding: 10px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  background: linear-gradient(135deg, #0078d7, #00b4d8);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+
+#contactResult {
+  margin-top: 20px;
+  text-align: center;
+  color: #0078d7;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+#datetime {
+  text-align: center;
+  color: #333;
+  font-size: 1rem;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 20px;
 }
